# langchain-openvino-genai

./: .gitignore  NOTICE  README.md  pyproject.toml
scripts/: run_bind_tools.py  run_chat_model.py  run_llm_model.py  run_stream_chat.py  run_structured_output.py
src/langchain_openvino_genai/: __init__.py  chat_model.py  genai_helper.py  llm_model.py  load_model.py  output_parsers.py
tests/: README.md  conftest.py
tests/compliance/: test_chat_compliance.py  test_llm_compliance.py
tests/features/: test_bind_tools.py  test_device_support.py  test_structured_output.py
tests/unit/: test_chat_model.py  test_genai_helper.py  test_llm_model.py  test_load_model.py  test_output_parsers.py
