[project]
name = "langchain-openvino-genai"
version = "0.0.2.dev0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "snow7y", email = "103980824+snow7y@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.34.4",
    "langchain-core>=0.3.76",
    "openvino-genai>=2025.3.0.0",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"}
]
lint = [
    "pyright>=1.1.405",
    "ruff>=0.13.0",
]
test = [
    "langchain-tests==0.3.21",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-socket>=0.7.0",
]


# (https://zenn.dev/mutex_inc/articles/4183b992ccd701)
[tool.ruff]
line-length = 120
exclude = [
    "src/models/migrations/versions/",
]

[tool.ruff.format]
docstring-code-format = true


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "D400",
    "D415",
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
    "ERA001",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF022",
    "RUF100",
    "COM812",
    "DTZ005",
    "BLE001",
    "PLC0415",
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",
    "S101",
    "N802",
    "ARG",
    "SLF001",
]

# logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6


[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "src/models/migrations/versions"
]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
